helm/testovacnie subory/Kubernetes_2023_2_3-files/12-configmap-env.yaml
kind: Pod
apiVersion: v1
metadata:
  name: busybox-test-configmap
  namespace: default
spec:
  containers:
    - name: busybox
      image: docker.io/busybox:latest
      command:
        - "/bin/sleep"
        - "10000"
