helm/testovacnie subory/Kubernetes_2023_2_3-files/14-secrets.yaml
kind: Pod
apiVersion: v1
metadata:
  name: busybox-test-secret
  namespace: default
spec:
  containers:
    - name: busybox
      image: docker.io/busybox:latest
      command:
        - "/bin/sleep"
        - "10000"
      volumeMounts:
      - name: dbparamsvolume
        mountPath: "/opt/secrets"
  volumes:
  - name: dbparamsvolume
    secret:
      secretName: dbconnectionparams-secret
