helm/testovacnie subory/Kubernetes_2023_2_3-files/18-pvc-usage.yaml
kind: Pod
apiVersion: v1
metadata:
  name: pvexample
spec:
  containers:
    - name: example
      image: docker.io/busybox:latest
      volumeMounts:
      - mountPath: "/data"
        name: example-csi-volume
      command: [ "sleep", "1000000" ]
  volumes:
    - name: example-csi-volume
      persistentVolumeClaim:
        claimName: example-csi-pvc
