helm/testovacnie subory/Kubernetes_2023_2_3-files/2-pod-webserver-with-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  containers:
  - name: webserver
    image: docker.io/nginx:latest
    ports:
      - containerPort: 80
