helm/testovacnie subory/Kubernetes_2023_2_3-files/3-pod-webserver-with-init-container-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  containers:
  - name: webserver
    image: docker.io/nginx:latest
    ports:
      - containerPort: 80
    volumeMounts:
    - name: htmlfiles
      mountPath: /usr/share/nginx/html
  volumes:
  - name: htmlfiles
    emptyDir: {}
