helm/testovacnie subory/Kubernetes_2023_2_3-files/4-pod-webserver-with-init-container-file-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  containers:
  - name: webserver
    image: docker.io/nginx:latest
    ports:
      - containerPort: 80
    volumeMounts:
    - name: htmlfiles
      mountPath: /usr/share/nginx/html
  - name: simplesidecar
    image: docker.io/busybox:latest
    command: ["/bin/sh"]
    args: ["-c", "while true; do date; sleep 1; done"]
  volumes:
  - name: htmlfiles
    emptyDir: {}
