helm/testovacnie subory/Kubernetes_2023_2_3-files/13-configmap-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: website
  replicas: 1
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: docker.io/nginx:latest
          ports:
            - containerPort: 9080
          volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: configmap-volume
      volumes:
      - name: configmap-volume
        configMap:
          name: website-nginx-cm

---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: default
spec:
  selector:
    app: website
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9080
