helm/testovacnie subory/Kubernetes_2023_2_3-files/9-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  type: ExternalName
  externalName: root.cz
